# myflow

./: .gitignore  README.md  dev_server.py  edgeone.json  package.json  pyproject.toml  vite.config.js
agents/: index.py  requirements.txt  stream.py
agents/_crews/content_crew/: content_crew.py
agents/_crews/content_crew/config/: agents.yaml  tasks.yaml
cloud-functions/: requirements.txt
cloud-functions/api/research/: index.py
cloud-functions/research/: index.py
frontend/: index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx
output/: report.md  report_cn.md
src/: App.jsx  index.css
src/myflow/: main.py
src/myflow/crews/content_crew/: content_crew.py
src/myflow/crews/content_crew/config/: tasks.yaml  tasks_cn.yaml
