[project]
name = "myflow"
version = "0.1.0"
description = "myflow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.14.7",
    "langchain-ollama>=1.1.0",
]

[project.scripts]
kickoff = "myflow.main:kickoff"
run_crew = "myflow.main:kickoff"
plot = "myflow.main:plot"
run_with_trigger = "myflow.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
